--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.2.5",
+        "php": "^7.3|^7.4",
         "braintree/braintree_php": "^6.10",
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^1.0",
